updated texts and fixed visibility on theme switcher

--- a/themes/hugoplate/assets/css/navigation.css
+++ b/themes/hugoplate/assets/css/navigation.css
@@ -51,7 +51,7 @@
   @apply inline-flex;
 
   label {
-    @apply bg-border relative inline-block h-4 w-6 cursor-pointer rounded-2xl lg:w-10;
+    @apply bg-gray-300 dark:bg-darkmode-border relative inline-block h-4 w-6 cursor-pointer rounded-2xl lg:w-10;
   }
 
   input {
